feature(#4155): Rename shared pattern to corporate pattern
