# community/go-engines-community/docs/swagger.yaml
@@ -2069,7 +2069,7 @@ definitions:
       entity_pattern:
         $ref: '#/definitions/pattern.Entity'
         type: object
-      is_shared:
+      is_corporate:
         type: boolean
       pbehavior_pattern:
         $ref: '#/definitions/pattern.Pbehavior'
@@ -2079,7 +2079,7 @@ definitions:
       type:
         type: string
     required:
-    - is_shared
+    - is_corporate
     - title
     - type
     type: object
@@ -2106,6 +2106,8 @@ definitions:
     type: object
   pattern.ListRequest:
     properties:
+      corporate:
+        type: boolean
       filter:
         type: string
       limit:
@@ -2116,8 +2118,6 @@ definitions:
         type: boolean
       search:
         type: string
-      shared:
-        type: boolean
       sort:
         type: string
       sort_by:
@@ -2146,7 +2146,7 @@ definitions:
       entity_pattern:
         $ref: '#/definitions/pattern.Entity'
         type: object
-      is_shared:
+      is_corporate:
         type: boolean
       pbehavior_pattern:
         $ref: '#/definitions/pattern.Pbehavior'
@@ -7035,6 +7035,9 @@ paths:
       operationId: saved-patterns-find-all
       parameters:
       - in: query
+        name: corporate
+        type: boolean
+      - in: query
         name: filter
         type: string
       - in: query
@@ -7049,9 +7052,6 @@ paths:
       - in: query
         name: search
         type: string
-      - in: query
-        name: shared
-        type: boolean
       - in: query
         name: sort
         type: string
